--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -187,12 +187,9 @@ series:
         dtstart: 2021-12-09 18:00:00+01:00
         dtend: 2021-12-09 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Apr 7, 6:00 PM  CEST: **Update**: Due to the situation in Ukraine, the event was moved to April 7th, we still look forward to seeing you there!
-
-
-        Doing threat modeling is one of the main requirem'
-      og_title: Agile Visual Threat Modeling (Against a Beer Tap Infrastructure), Thu, Apr 7, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/pure-storage-talks/events/283991609/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Agile Visual Threat Modeling (Against a Beer Tap Infrastructure)
         description: 'Pure Storage Talks
@@ -1666,11 +1663,9 @@ series:
         dtstart: 2022-04-07 18:00:00+02:00
         dtend: 2022-04-07 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Jun 2, 6:00 PM  CEST: **IMPORTANT! This is a hybrid event.**
-
-        **Take just a minute to register [here](https://docs.google.com/forms/d/e/1FAIpQLSfrjEd73wmXPJwdfuOx_7V3PmoXvzuCwDD81cByUmfiLMV8eg/vi'
-      og_title: Can You Land a Job in Tech without a CS Degree?, Thu, Jun 2, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/pure-storage-talks/events/285674292/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Can You Land a Job in Tech without a CS Degree?
         description: 'Pure Storage Talks
@@ -1681,14 +1676,14 @@ series:
           **IMPORTANT! This is a hybrid event.****Take just a minute to register (https://docs.google.com/forms/d/e/1FAIpQLSfrjEd73wmXPJwdfuOx_7V3PmoXvzuCwDD81c...
 
 
-          https://www.meetup.com/Pure-Storage-Talks/events/285674292/'
+          https://www.meetup.com/pure-storage-talks/events/285674292/'
         location: Amazon Court (Rohanské nábř. 661/5, Rohanský ostrov, Praha-Praha 8, Czech Republic 186 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_285674292@meetup.com
-        url: https://www.meetup.com/Pure-Storage-Talks/events/285674292/
+        url: https://www.meetup.com/pure-storage-talks/events/285674292/
         dtstart: 2022-06-02 18:00:00+02:00
         dtend: 2022-06-02 19:30:00+02:00
   - meetupcom:
@@ -4378,9 +4373,9 @@ series:
         dtstart: 2022-06-16 18:00:00+02:00
         dtend: 2022-06-16 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Jun 30, 5:30 PM  CEST: \*\*Make sure you book your spot at [Eventbrite ](https://www.eventbrite.com/e/stand-out-from-the-crowd-how-to-land-a-highly-paid-technical-job-registration-367486460897)\*'
-      og_title: Stand out from the crowd. How to land a highly-paid technical job., Thu, Jun 30, 2022, 5:30 PM   | Meetup
-      url: https://www.meetup.com/pure-storage-talks/events/286587285/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Stand out from the crowd. How to land a highly-paid technical job.
         description: 'Pure Storage Talks
@@ -4401,6 +4396,30 @@ series:
         url: https://www.meetup.com/pure-storage-talks/events/286587285/
         dtstart: 2022-06-30 17:30:00+02:00
         dtend: 2022-06-30 20:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Optimizing Go Meet Up
+        description: 'Pure Storage Talks
+
+          Thursday, June 16 at 6:00 PM
+
+
+          You are welcome to join us for the next Pure Storage Meet Up that will touch the topic of **Optimizing Go**. We’ll walk you through the basic tools Go...
+
+
+          https://www.meetup.com/pure-storage-talks/events/286435658/'
+        location: Amazon Court (Rohanské nábř. 661/5, Rohanský ostrov, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286435658@meetup.com
+        url: https://www.meetup.com/pure-storage-talks/events/286435658/
+        dtstart: 2022-06-16 18:00:00+02:00
+        dtend: 2022-06-16 19:30:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
