--- a/data/sources/agilni-cafe-praha.yaml
+++ b/data/sources/agilni-cafe-praha.yaml
@@ -6441,9 +6441,9 @@ series:
         dtstart: 2021-10-05 18:00:00+02:00
         dtend: 2021-10-05 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, May 10, 6:00 PM  CEST: Příští Agilní Open Café alias setkání Agilních nadšenců bude po dlouhé době opět v kavárně v Praze ve úterý 10. května 2022. Opencafé je pro ty, kteří chtějí něčím zajímavý'
-      og_title: Agilní Open Café Praha – 10.5.2022, Tue, May 10, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/agilni-open-cafe-praha/events/285202778/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Agilní Open Café Praha – 10.5.2022
         description: 'Agilni Open Cafe Praha
@@ -6465,9 +6465,9 @@ series:
         dtstart: 2022-05-10 18:00:00+02:00
         dtend: 2022-05-10 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Mar 2, 6:00 PM  CET: Příští Agilní Open Café alias setkání Agilních nadšenců bude po dlouhé době opět v kavárně v Praze ve středu 2. března 2022. Opencafé je pro ty, kteří chtějí něčím zajímavý'
-      og_title: Agilní Open Café Praha – 2.3.2022, Wed, Mar 2, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/agilni-open-cafe-praha/events/283977245/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Agilní Open Café Praha – 2.3.2022
         description: 'Agilni Open Cafe Praha
@@ -6777,12 +6777,9 @@ series:
         dtstart: 2022-03-02 18:00:00+01:00
         dtend: 2022-03-02 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Fri, Oct 8, 3:00 PM  CEST: We bring the best speakers to your homes. Join the October Virtual Bonus Agile Prague Conference.
-
-
-        Reserve the date for Friday October 8, 2021 for our AgilePrague Virtual C'
-      og_title: Agile Prague Conference 2021 Virtual Edition, Fri, Oct 8, 2021, 3:00 PM   | Meetup
-      url: https://www.meetup.com/agilni-open-cafe-praha/events/280726386/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Agile Prague Conference 2021 Virtual Edition
         description: 'Agilni Open Cafe Praha
@@ -6804,9 +6801,9 @@ series:
         dtstart: 2021-10-08 15:00:00+02:00
         dtend: 2021-10-08 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Oct 5, 6:00 PM  CEST: Příští Agilní Open Café alias setkání Agilních nadšenců bude po dlouhé době opět v kavárně v Praze ve úterý 5. října 2021. Opencafé je pro ty, kteří chtějí něčím zajímavým '
-      og_title: Agilní Open Café Praha – 5.10.2021, Tue, Oct 5, 2021, 6:00 PM   | Meetup
-      url: https://www.meetup.com/agilni-open-cafe-praha/events/280683798/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Agilní Open Café Praha – 5.10.2021
         description: 'Agilni Open Cafe Praha
